# justpdf

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  roadmap.md
.github/workflows/: ci.yml
dev/: pdf-compress-wasm-design.md
docs/: book.toml  mupdf-feature-analysis.md
docs/src/: SUMMARY.md  api-reference.md  bindings.md  cli.md  creating.md  formats.md  getting-started.md  introduction.md  modifying.md  reading.md  rendering.md  text-extraction.md
justpdf/: Cargo.toml  README.md
justpdf-cli/: Cargo.toml  README.md
justpdf-cli/src/: main.rs
justpdf-compress-wasm/: Cargo.toml  README.md
justpdf-compress-wasm/src/: lib.rs
justpdf-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
justpdf-core/benches/: corpus.rs  parse.rs  text.rs
justpdf-core/examples/: check_text.rs  check_tounicode.rs  compare_mupdf.rs  compare_stream.rs  compress_pdf.rs  debug_page34.rs  decode_stream.rs  dump_objects.rs  extract_images.rs  find_obj.rs  list_fonts.rs  page_info.rs  profile.rs  roundtrip.rs  trace_ops.rs
justpdf-core/src/: embedded_file.rs  error.rs  function.rs  journal.rs  lib.rs  linearized.rs  page_label.rs  parser.rs  repair.rs
justpdf-core/src/action/: builder.rs  mod.rs  parse.rs  types.rs
justpdf-core/src/annot/: appearance.rs  builder.rs  mod.rs  parse.rs  redact.rs  types.rs
justpdf-core/src/color/: icc.rs  mod.rs
justpdf-core/src/content/: mod.rs  operator.rs
justpdf-core/src/crypto/: aes_cipher.rs  auth.rs  decrypt.rs  encrypt.rs  key.rs  mod.rs  rc4.rs  types.rs
justpdf-core/src/font/: cff.rs  cjk.rs  cmap.rs  encoding.rs  mod.rs  opentype.rs  recovery.rs  standard14.rs  subset.rs  type3.rs
justpdf-core/src/form/: appearance.rs  fill.rs  flatten.rs  mod.rs  parse.rs  types.rs
justpdf-core/src/image/: mod.rs
justpdf-core/src/object/: mod.rs  types.rs
justpdf-core/src/ocg/: builder.rs  parse.rs  types.rs
justpdf-core/src/outline/: builder.rs  parse.rs  types.rs
justpdf-core/src/page/: mod.rs
justpdf-core/src/sign/: appearance.rs  byterange.rs  cert.rs  detect.rs  mod.rs  sign_pdf.rs  timestamp.rs  types.rs  verify.rs
justpdf-core/src/stream/: ascii85.rs  ascii_hex.rs  ccitt.rs  dct.rs  flate.rs  mod.rs  predictor.rs  run_length.rs
justpdf-core/src/text/: format.rs  layout.rs  mod.rs  search.rs  text_layout.rs
justpdf-core/src/tokenizer/: mod.rs  reader.rs  token.rs
justpdf-core/src/writer/: clean.rs  compress.rs  document.rs  encode.rs  linearize.rs  mod.rs  modify.rs  object_stream.rs  page.rs  serialize.rs
justpdf-core/src/xref/: mod.rs  table.rs
justpdf-core/tests/: generate_fixtures.rs  integration.rs
justpdf-core/tests/fixtures/: not_a_pdf.txt
justpdf-ffi/: Cargo.toml  README.md
justpdf-ffi/include/: justpdf.h
justpdf-ffi/src/: lib.rs
justpdf-formats/: Cargo.toml  README.md
justpdf-formats/src/: common.rs  detect.rs  error.rs  lib.rs
justpdf-formats/src/cbz/: mod.rs
justpdf-formats/src/epub/: mod.rs
justpdf-formats/src/fb2/: mod.rs
justpdf-formats/src/mobi/: mod.rs
justpdf-formats/src/office/: mod.rs
justpdf-formats/src/plaintext/: mod.rs
justpdf-formats/src/svg/: mod.rs
justpdf-formats/src/xps/: mod.rs
justpdf-node/: Cargo.toml  README.md  package.json
justpdf-node/src/: lib.rs
justpdf-python/: Cargo.toml  README.md  pyproject.toml
justpdf-python/src/: lib.rs
justpdf-render/: Cargo.toml  README.md
justpdf-render/benches/: render.rs
justpdf-render/examples/: render.rs
justpdf-render/src/: bbox_device.rs  device.rs  display_list.rs  error.rs  glyph.rs  glyph_cache.rs  graphics_state.rs  interpreter.rs  lib.rs  render.rs  shading.rs  svg_device.rs
justpdf-render/tests/: render_synthetic.rs  render_test.rs
justpdf-special/: Cargo.toml  README.md
justpdf-special/src/: error.rs  lib.rs
justpdf-special/src/barcode/: mod.rs
justpdf-special/src/bidi/: mod.rs
justpdf-special/src/deskew/: mod.rs
justpdf-special/src/ocr/: mod.rs
justpdf-special/src/zugferd/: mod.rs
justpdf-wasm/: Cargo.toml  README.md
justpdf-wasm/src/: lib.rs
justpdf/examples/: basic_read.rs  create_pdf.rs  merge_pdfs.rs  render_page.rs
justpdf/src/: error.rs  lib.rs
src/: lib.rs
