[package]
name = "justpdf-cli"
version = "0.1.2"
edition = "2024"
description = "Command-line PDF tool powered by justpdf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"
keywords = ["pdf", "cli", "convert", "merge", "render"]
categories = ["command-line-utilities"]
homepage = "https://github.com/kihyun1998/justpdf"

[[bin]]
name = "justpdf"
path = "src/main.rs"

[dependencies]
justpdf-core = { version = "0.1.2", path = "../justpdf-core" }
justpdf-render = { version = "0.1.2", path = "../justpdf-render" }
justpdf-formats = { version = "0.1.2", path = "../justpdf-formats", features = ["all"] }
clap = { version = "4", features = ["derive"] }
