[package]
name = "justpdf-compress-wasm"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "PDF compression WASM module — compress PDFs entirely in the browser"
repository = "https://github.com/kihyun1998/justpdf"
homepage = "https://github.com/kihyun1998/justpdf"
keywords = ["pdf", "compression", "wasm", "browser", "optimize"]
categories = ["wasm", "compression"]

[lib]
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { path = "../justpdf-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
