[package]
name = "justpdf-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[features]
default = []
mmap = ["memmap2"]
arena = ["bumpalo"]

[dependencies]
thiserror = "2"
memmap2 = { version = "0.9", optional = true }
bumpalo = { version = "3", features = ["collections"], optional = true }
flate2 = "1"
jpeg-decoder = "0.3"
ttf-parser = "0.25"
png = "0.17"
justjp2 = "0.1"
justbig2 = "0.1"

# Crypto (Phase 6)
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
sha2 = "0.10"

# Digital signatures (Phase 6.3)
cms = "0.2"
x509-cert = "0.2"
der = "0.7"
const-oid = "0.9"
rsa = { version = "0.9", features = ["sha2", "pkcs5"] }
pkcs8 = "0.10"
signature = "2"
spki = "0.7"

[dev-dependencies]
rand = "0.8"
rsa = { version = "0.9", features = ["sha2", "pkcs5"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "corpus"
harness = false
