[package]
name = "justpdf-ffi"
version = "0.1.0"
edition = "2024"
description = "C FFI bindings for justpdf PDF engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
justpdf-core = { path = "../justpdf-core" }
justpdf-render = { path = "../justpdf-render" }
