[package]
name = "justpdf-formats"
version = "0.1.2"
edition = "2024"
description = "Extended format support for justpdf - XPS, EPUB, SVG, Office, CBZ"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"
keywords = ["pdf", "epub", "svg", "xps", "docx"]
categories = ["parser-implementations"]
homepage = "https://github.com/kihyun1998/justpdf"

[features]
default = []
xps = ["zip", "roxmltree"]
epub = ["zip", "roxmltree"]
svg = ["roxmltree"]
office = ["zip", "roxmltree"]
cbz = ["zip"]
plaintext = []
mobi = []
fb2 = ["roxmltree"]
all = ["xps", "epub", "svg", "office", "cbz", "plaintext", "mobi", "fb2"]

[dependencies]
justpdf-core = { version = "0.1.2", path = "../justpdf-core" }
justpdf-render = { version = "0.1.2", path = "../justpdf-render" }
thiserror = "2"
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
roxmltree = { version = "0.20", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
