[package]
name = "justpdf-node"
version = "0.1.0"
edition = "2024"
description = "Node.js bindings for justpdf PDF engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { path = "../justpdf-core" }
justpdf-render = { path = "../justpdf-render" }
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

# Prevent cargo from trying to include this in the parent workspace
[workspace]
