[package]
name = "justpdf-python"
version = "0.1.1"
edition = "2024"
description = "Python bindings for justpdf PDF engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[lib]
name = "justpdf"
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { version = "0.1.1", path = "../justpdf-core" }
justpdf-render = { version = "0.1.1", path = "../justpdf-render" }
pyo3 = { version = "0.23", features = ["extension-module"] }

[workspace]
