[package]
name = "justpdf-python"
version = "0.1.2"
edition = "2024"
description = "Python bindings for justpdf PDF engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"
homepage = "https://github.com/kihyun1998/justpdf"
keywords = ["pdf", "python", "pyo3", "document", "text-extraction"]
categories = ["api-bindings"]

[lib]
name = "justpdf"
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { version = "0.1.3", path = "../justpdf-core" }
justpdf-render = { version = "0.1.2", path = "../justpdf-render" }
pyo3 = { version = "0.23", features = ["extension-module"] }

[workspace]
