[package]
name = "justpdf-render"
version = "0.1.0"
edition = "2024"

[dependencies]
justpdf-core = { path = "../justpdf-core" }
tiny-skia = "0.11"
ttf-parser = "0.25"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
justpdf-core = { path = "../justpdf-core" }
