[package]
name = "justpdf-render"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[features]
default = []
parallel = ["rayon"]

[dependencies]
justpdf-core = { path = "../justpdf-core" }
tiny-skia = "0.11"
ttf-parser = "0.25"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = { version = "1", optional = true }

[dev-dependencies]
justpdf-core = { path = "../justpdf-core" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false
