[package]
name = "justpdf-special"
version = "0.1.2"
edition = "2024"
description = "Special features for justpdf - OCR, barcode, ZUGFeRD, BiDi, deskew"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"
keywords = ["pdf", "ocr", "barcode", "qrcode", "zugferd"]
categories = ["multimedia::images"]
homepage = "https://github.com/kihyun1998/justpdf"

[features]
default = []
ocr = []
barcode = ["qrcode"]
zugferd = ["roxmltree"]
bidi = ["unicode-bidi"]
deskew = []
all = ["ocr", "barcode", "zugferd", "bidi", "deskew"]

[dependencies]
justpdf-core = { version = "0.1.3", path = "../justpdf-core" }
justpdf-render = { version = "0.1.2", path = "../justpdf-render" }
thiserror = "2"
qrcode = { version = "0.14", optional = true }
roxmltree = { version = "0.20", optional = true }
unicode-bidi = { version = "0.3", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
