[package]
name = "justpdf-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for justpdf PDF engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { path = "../justpdf-core" }
justpdf-render = { path = "../justpdf-render" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
