[package]
name = "justpdf-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for justpdf PDF engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[lib]
crate-type = ["cdylib"]

[dependencies]
justpdf-core = { version = "0.1.0", path = "../justpdf-core" }
justpdf-render = { version = "0.1.0", path = "../justpdf-render" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
