[package]
name = "justpdf"
version = "0.1.1"
edition = "2024"
description = "Pure Rust PDF engine - read, render, extract, create, modify"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justpdf"

[features]
default = []
mmap = ["justpdf-core/mmap"]
parallel = ["justpdf-render/parallel"]
arena = ["justpdf-core/arena"]
async = ["tokio"]

[dependencies]
justpdf-core = { version = "0.1.1", path = "../justpdf-core" }
justpdf-render = { version = "0.1.1", path = "../justpdf-render" }
tokio = { version = "1", features = ["fs", "rt"], optional = true }

[dev-dependencies]
